--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
+    "joi": "^14.0.3",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "sequelize": "^4.41.0",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
